# twm

./: configure.ac
man/: twm.man
src/: add_window.c  add_window.h  events.c  events.h  gc.c  gram.y  iconmgr.c  iconmgr.h  icons.c  icons.h  menus.c  menus.h  parse.c  parse.h  resize.c  resize.h  screen.h  session.c  twm.c  twm.h  util.c  util.h
